--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -29,7 +30,8 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18"
